--- a/ASPNET_SHAH/Views/Product/Create.cshtml
+++ b/ASPNET_SHAH/Views/Product/Create.cshtml
@@ -1,43 +1,49 @@
-﻿@model Product
+﻿@using ASPNET_SHAH.ViewModels
+@model CreateProductVM
 
-<div style="width: 50%; margin: 20px auto; background-color: lightgoldenrodyellow; border-radius: 5px; padding: 20px; border: 2px solid black;">
-    <h1 style="text-align: center;">Створення нового продукту</h1>
-    <form asp-action="Create" method="post">
-        <div class="mb-3">
-            <label asp-for="Name" class="form-label">Назва</label>
-            <input type="text" class="form-control" asp-for="Name" required>
+<div style="width: 40%; margin: 0px auto; background-color: lightgoldenrodyellow; border-radius: 5px; padding: 10px; border: 2px solid black;">
+    <h1 style="text-align: center;">Створення нового товару</h1>
+    <form asp-action="Create" enctype="multipart/form-data" method="post" style="padding: 15px;">
+        <div class="form-group">
+            <label for="name">Назва</label>
+            <input asp-for="Product.Name" type="text" class="form-control" placeholder="Введіть ім'я">
+            <span asp-validation-for="Product.Name" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
-            <label asp-for="Description" class="form-label">Опис</label>
-            <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+        <div class="form-group">
+            <label for="description">Опис</label>
+            <input asp-for="Product.Description" type="text" class="form-control" placeholder="Введіть опис">
+            <span asp-validation-for="Product.Description" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
-            <label asp-for="Price" class="form-label">Ціна</label>
-            <input type="number" class="form-control" asp-for="Price" step="0.01" min="0" required>
+        <div class="form-group">
+            <label for="price">Ціна</label>
+            <input asp-for="Product.Price" type="number" class="form-control" placeholder="Введіть ціну">
+            <span asp-validation-for="Product.Price" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
-            <label asp-for="Amount" class="form-label">Кількість</label>
-            <input type="number" class="form-control" asp-for="Amount" min="0" required>
+        <div class="form-group">
+            <label for="amount">Кількість</label>
+            <input asp-for="Product.Amount" type="number" class="form-control" placeholder="Введіть кількість">
+            <span asp-validation-for="Product.Amount" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
-            <label asp-for="Image" class="form-label">Зображення (URL)</label>
-            <input type="text" class="form-control" asp-for="Image">
+        <div class="form-group">
+            <label for="category">Категорія</label>
+            <select class="form-select" asp-for="Product.CategoryId" asp-items="@Model.Categories"></select>
+            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
-            <label asp-for="CategoryId" class="form-label">Категорія</label>
-            <select class="form-select" asp-for="CategoryId" asp-items="ViewBag.Categories">
-                <option value="">Оберіть категорію</option>
-            </select>
+        <div class="form-group">
+            <label for="image">Зображення</label>
+            <input asp-for="File" type="file" class="form-control">
+            <span asp-validation-for="File" class="text-danger"></span>
         </div>
-
         <div style="text-align: center; padding-top: 10px;">
             <input type="submit" value="Створити" class="btn btn-success" />
             <a class="btn btn-dark" asp-action="Index">Повернутися</a>
         </div>
+
     </form>
+
 </div>
